--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="nav-container">
       <div class="logo">
-        <img src="../imagenes/491771186_1283413673789625_3239846771567884815_n-removebg-preview.png" alt="Logo CECyTE" />
+        <img src="/imagenes/491771186_1283413673789625_3239846771567884815_n-removebg-preview.png" alt="Logo CECyTE" />
       </div>
       <nav>
         <ul>
@@ -38,7 +38,7 @@ Conócenos y descubre por qué somos una de las mejores opciones para construir 
 </p>
 
 
-      <img src="../imagenes/75246715_2564524693634962_1380401217624080384_n.jpg" alt="Imagen de la escuela">
+      <img src="/imagenes/75246715_2564524693634962_1380401217624080384_n.jpg" alt="Imagen de la escuela">
     </section>
   </main>
 
